# maknoon-ledger-eth-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: config.yml
android/: build-aar.sh  settings.gradle.kts
ios/: build-xcframework.sh
ledger-eth-core/: Cargo.toml
ledger-eth-core/src/: client.rs  error.rs  lib.rs  transport.rs  types.rs
